# C__IAM

./: CMakeLists.txt  LICENSE  README.md  diagnostico.sh  generar_archivos.sh  generate_and_build.sh  generate_templates.sh  project_analysis.sh
api_gateway/src/: main.cpp  simple_main.cpp
auth_service/include/: auth_service.h
auth_service/src/: auth_service.cpp
config/: config.json
data/: iam_database.db
document_service/include/: document_service_client.h
document_service/src/: document_service_client.cpp
document_service/templates/: daca_initial_103.json  extreme_hardship_150.json  i129f_9.json  i130_child_21.json  i130_parent_7.json  i130_sibling_18.json  i130_spouse_20.json  i140_eb1_120.json  i140_eb2_116.json  i140_eb3_127.json  i485_asylee_33.json  i485_cover_letter_34.json  i485_diversity_37.json  i485_employment_46.json  i485_family_45.json  i601_criminal_84.json  i601_fraud_73.json  i601_unlawful_presence_66.json  i601_waiver.json  i601a_75.json  i765_59.json  n400_90.json  o1_petition_124.json  perm_labor_cert_138.json  supporting_letter_145.json  tps_initial_105.json  u_visa_113.json
ia_migrante_engine/data/: knowledge_en.json  knowledge_es.json
ia_migrante_engine/include/: ia_migrante_client.h
ia_migrante_engine/src/: ia_migrante_client.cpp
learning_service/include/: learning_engine.h
learning_service/src/: learning_engine.cpp
legal_ocr_service/include/: ocr_client.h
legal_ocr_service/src/: ocr_client.cpp
openai_bridge/: app.py  requirements.txt
openai_bridge/prompts/: case_analysis.json  document_enhancement.json  immigration_query_en.json  immigration_query_es.json
scripts/: build.sh  diagnostico.sh  docker_build.sh  run.sh  setup_db.sh  start_openai_bridge.sh
tts_service/include/: tts_client.h
tts_service/src/: tts_client.cpp
